@@ -6,6 +6,7 @@ Bugs and ideas:
  * Sergei Sarbash <sarbash.s@gmail.com>
  * Julien Valroff <julien@kirya.net>
  * Iffan Arzanul Haq <arzanulhaq@gmail.com>
+ * Thomas Koch <thomas@koch.ro>
 
 Packages:
  - Arch Linux:
