@@ -1,3 +1,6 @@
+2011-09-19: v1.1:
++ Add new option: mainwindow_resizable
+
 2011-09-05: v1.0:
 - Fix bug with external viewer when mark_today is false
 + Add ability to show week numbers — show_week_numbers option
